--- a/responsive_design/01-styles.css
+++ b/responsive_design/01-styles.css
@@ -52,20 +52,6 @@
     color: white;
     text-decoration: none;
 }
-/* SUMMARY
-1. GLOBAL
-2. LAYOUT
-3. SECTION
-4. CARD
-*/
-
-
-/*** 1. GLOBAL ***/
-
-/* Reset / Normalize
-  ============================= */
-
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%
@@ -607,7 +593,7 @@ ul.row {
 }
 
 .hero-homepage {
-    background-image: url(../images/banner-home.jpg);
+    background-image: url(./images/banner-home.jpg);
     background-position: 65% 8rem;
     background-repeat: no-repeat;
     background-size: 90rem auto;
